[package]
name = "malware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
serde_json = "1.0.89"
serde = { version = "1.0.148", features = ["derive"] }
magic-crypt = "3.1.12"

[dependencies.windows]
version = "0.43.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]